# Snake_Game_Qt_Cplusplus

./: .gitignore  CMakeLists.txt  README.md  Snake.bat  Snake.exe.lnk  Snake.pro  Snake.sh  dockerfile  drawer.cpp  drawer.h  food.cpp  food.h  game_window.cpp  game_window.h  game_window.ui  main.cpp  mainwindow.cpp  mainwindow.h  snake.cpp  snake.h  ui_game_window.h  utilities.h
assets/: resources.qrc
inc/: collision_manager.cpp  collision_manager.h  common.h  config.h  controller.h  coordinates.h  drawer.h  food.h  game.h  game_engine.h  game_speed_manager.h  game_window.h  log_manager.h  model.h  snake.h  snake_segment.h  speed_manager.h
inc/view/: end_game_dialog.h  game_arena.h  gui_config.h  main_window.h
qml/: CMakeLists.txt  Food.qml  GameArea.qml  GameInput.qml  Main.qml  UiScaler.qml
qml/arena/: Arena.qml  Wall.qml
qml/overlays/: EndGameOverlay.qml  EscapeMenuOverlay.qml  StartingImageOverlay.qml
qml/snake/: BodySegment.qml  Eye.qml  HeadSegment.qml  Snake.qml
src/: CMakeLists.txt  arena.cpp  arena.h  body_segment.cpp  body_segment.h  collision_manager.cpp  collision_manager.h  controller.cpp  controller.h  coordinates.cpp  coordinates.h  direction.h  drawer.cpp  food.cpp  food_factory.cpp  food_factory.h  food_manager.cpp  food_manager.h  food_model.cpp  food_model.h  game.cpp  game.h  game_config.cpp  game_config.h  game_coordinator.cpp  game_coordinator.h  game_engine.cpp  game_loop.cpp  game_loop.h  game_speed_manager.cpp  game_window.cpp  head_segment.cpp  head_segment.h  input_handler.cpp  input_handler.h  log_manager.cpp  main.cpp  model.cpp  model.h  overlay_manager.cpp  (+12 more)
src/backend/: CMakeLists.txt  animation_manager.cpp  animation_manager.h  collision_detector.cpp  collision_detector.h  collision_manager.cpp  collision_manager.h  config.h  config_prod.cpp  config_prod.h  coordinates.cpp  coordinates.h  direction.h  game_loop.cpp  game_loop.h  game_manager.cpp  game_manager.h  game_parameters.h  id_generator.h  input_handler.cpp  input_handler.h  snake_iterator.cpp  snake_iterator.h  snake_reverse_iterator.cpp  snake_reverse_iterator.h
src/backend/model/: arena.cpp  arena.h  body_segment.cpp  body_segment.h  custom_graphics_item.cpp  custom_graphics_item.h  food.cpp  food.h  food_factory.cpp  food_factory.h  food_manager.cpp  food_manager.h  game_speed_manager.cpp  game_speed_manager.h  game_state_manager.cpp  game_state_manager.h  graphics_scene.cpp  graphics_scene.h  head_segment.cpp  head_segment.h  model.cpp  model.h  snake.cpp  snake.h  snake_segment.cpp  snake_segment.h
src/backend/model/tiles/: wall.cpp  wall.h
src/backend/model/tiles/background_tiles/: abstract_background_tile.cpp  abstract_background_tile.h  background_tile.cpp  background_tile.h
src/frontend/: CMakeLists.txt  end_game_dialog.cpp  end_game_dialog.h  game_arena.cpp  game_arena.h  graphics_view.cpp  graphics_view.h  gui_config.h  main_window.cpp  main_window.h
src/state_machine/: abstract_state.h  game_state_manager.h  game_state_type.h  i_state_actions.h
src/state_machine/states/: escape_menu_state.h  game_ended_state.h  initialization_state.h  paused_for_debug_state.h  ready_to_start_state.h  running_state.h
src/view/: end_game_dialog.cpp  game_arena.cpp  main_window.cpp
tests/: CMakeLists.txt
tests/inc/: common_test_fixture.h
tests/src/: common_test_fixture.cpp  common_test_fixture.h  config_test.h  main.cpp  snake_collision_with_itself_test.cpp  snake_collision_with_wall_test.cpp  snake_creation_test.cpp  snake_growth_test.cpp  snake_movement_test.cpp  snake_test.cpp
ui_forms/: game_window.ui  main_window.ui
